--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -3,7 +3,10 @@
 
 @import 'mixins/media';
 @import 'mixins/outline';
+@import 'mixins/button';
 @import 'common/global';
 
 @import 'common/header';
 @import 'common/footer';
+
+@import 'index/intro';
