--- a/src/pages/common/layout.pug
+++ b/src/pages/common/layout.pug
@@ -3,12 +3,13 @@ html(lang="ru")
   block head
     head
       meta(charset="utf-8")
-      title Олд Траффорд
+      block title
+        title Олд Траффорд
       meta(content="width=device-width, initial-scale=1" name="viewport")
       meta(content="ie=edge" http-equiv="x-ua-compatible")
       link(rel="stylesheet" href="css/style.min.css")
   body
-    include ../includes/index/mixins
+    include ../includes/mixins
     block header
       include header
     block content
