--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -2,4 +2,11 @@ extends common/layout
 
 block content
   main
-
+    .intro(style="background-image: url(images/intro/bg.jpg)")
+      .container
+        .intro__inner
+          h2.intro__title Профессиональные бухгалтерские услуги
+          h3.intro__subtitle Полный спектр бухгалтерских услуг и налоговое консультирование любого вида деятельности
+          .intro__links
+            a.intro__link(href="intro__link") Подробнее
+            a.intro__link.intro__link--outline(href="intro__link") Рассчитать стоимость услуг
