--- a/src/css/utils/vars.scss
+++ b/src/css/utils/vars.scss
@@ -5,14 +5,17 @@ $media-md: 767px;
 $media-sm: 575px;
 $media-xs: 480px;
 // Colors
-$color-primary-alpha: #561075;
+$color-primary-alpha: #d4251f;
 $color-primary-beta: #fff;
-$color-primary-gamma: #000;
-$color-secondary-alpha: #303030;
-$color-secondary-beta: #cecfcf;
-$color-secondary-gamma: #f1f2f3;
-$color-tertiary-alpha: #39eca2cc;
-$color-tertiary-beta: #f8424c;
+$color-primary-gamma: #1d1d1d;
+$color-primary-psi: #00247d;
+$color-primary-omega: #6a6a6a;
+
+$color-secondary-beta: #ccc;
+$color-secondary-gamma: #383838;
+$color-secondary-psi: #4d7eff;
+$color-secondary-omega: #e5e5e5;
+
 // Fonts
 $font-primary: 'Museo', sans-serif;
 $font-secondary: 'Trajan', sans-serif;
