--- a/src/css/utils/vars.scss
+++ b/src/css/utils/vars.scss
@@ -16,6 +16,8 @@ $color-secondary-gamma: #383838;
 $color-secondary-psi: #4d7eff;
 $color-secondary-omega: #e5e5e5;
 
+$color-tertiary-beta: #f1f1f1;
+
 // Fonts
 $font-primary: 'Museo', sans-serif;
 $font-secondary: 'Trajan', sans-serif;
