--- a/src/pages/common/layout.pug
+++ b/src/pages/common/layout.pug
@@ -10,6 +10,7 @@ html(lang="ru")
       link(rel="stylesheet" href="css/style.min.css")
   body
     include ../includes/mixins
+    include ../includes/index/mixins
     block header
       include header
     block content
