--- a/src/pages/includes/mixins.pug
+++ b/src/pages/includes/mixins.pug
@@ -1,2 +1,2 @@
-mixin icon(icon, name)
-  svg(class= icon): use(xlink:href="images/sprite.svg#" + name)
+mixin icon(className, name)
+  svg(class= className): use(xlink:href="images/sprite.svg#" + name)
