--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -2,11 +2,54 @@ extends common/layout
 
 block content
   main
-    .intro(style="background-image: url(images/intro/bg.jpg)")
+    // Intro
+    section.intro(style="background-image: url(images/index/intro/bg.jpg)")
       .container
         .intro__inner
           h2.intro__title Профессиональные бухгалтерские услуги
           h3.intro__subtitle Полный спектр бухгалтерских услуг и налоговое консультирование любого вида деятельности
           .intro__links
-            a.intro__link(href="intro__link") Подробнее
-            a.intro__link.intro__link--outline(href="intro__link") Рассчитать стоимость услуг
+            a.intro__link(href="#") Подробнее
+            a.intro__link.intro__link--outline(href="#") Рассчитать стоимость услуг
+
+    // Descrip
+    section.descrip
+      .container
+        h2.descrip__title Аутсорсинг бухгалтерии с ООО &laquo;ОлдТраффорд&raquo; это
+        .descrip__inner
+          +descripItem(['Выгодно', 'Экономия до 57%'], 'benefit', ['Повышение рентабельности любого бизнеса, так или иначе, затрагивает минимизацию затрат. Любому предпринимателю важно снизить себестоимость продукции или услуг, где не последнее место в списке расходов занимают затраты на содержание административного персонала, в том числе и  бухгалтерии.', 'Сотрудничество с нами снизит расходы Вашей компании за счет отсутствия:'], ['выплат заработной платы сотрудникам, налоговых и иных обязательных отчислений;', 'расходов на организацию рабочих мест (закупку оргтехники, мебели, расходных материалов);', 'затрат на содержание отдельной офисной площади и оплаты коммунальных услуг, услуг связи;', 'расходов на повышение квалификации и мотивации персонала;', 'оплаты за  установку и регулярного обновления современного программного обеспечения.'])
+          +descripItem(['Гарантии', 'до 50 000 BYN'], 'warranty', ['В нашей компании выстроена строгая система контроля качества бухгалтерского и налогового учета, благодаря чему риск ошибок и неточностей в процессе оказания бухгалтерских услуг и подготовки отчетности в государственные органы сводится к минимуму.', 'Но мы гарантируем не только качественный результат, но и несем материальную ответственность перед каждым клиентом. Защита клиента от непредвиденных затрат осуществляется путем добровольного страхования нами профессиональной ответственности (от ошибок и упущений, совершенных или допущенных страхователем, которые будут установлены компетентными органами или вступившим в силу решением суда).', 'Агрегатный лимит ответственности составляет 50 000 BYN (пятьдесят тысяч белорусских рублей) на один страховой случай, а также 5 000 BYN (пять тысяч белорусских рублей) на возмещение судебных расходов.'])
+          +descripItem(['Качество и', 'профессионализм'], 'quality', ['Запросы бизнеса разнообразны, никогда не знаешь, с чем компания столкнется завтра, а только комплексный подход к планированию и учету позволяет снизить налоговую нагрузку за счет грамотной оптимизации налогообложения.', 'Полностью знать нюансы того или иного вопроса может только опытный и высококвалифицированный специалист, содержание которого в штате может быть нерентабельно.  Мы обслуживаем различные сферы деятельности, поэтому в штат нашей компании входят высококвалифицированные бухгалтера, причем не только универсалы, которые чаще обычных бухгалтеров сталкиваются с нестандартными ситуациями, но и специалисты узкого профиля – досконально знающие все тонкости конкретного направления.', 'Объемная экспертная поддержка позволяет нам осуществлять всю работу, связанную с бухгалтерским обслуживанием, максимально быстро, но без ущерба для качества.'])
+
+    //Provider
+    section.provider
+      .container
+        h2.provider__title Занимайтесь бизнесом, а бухгалтерией займемся мы
+        .provider__inner
+          +providerItem('Рассчитаем заработную плату и налоги Ваших сотрудников')
+          +providerItem('Систематизируем все Ваши доходы и расходы')
+          +providerItem('Соберем бухгалтерский баланс или книгу учета доходов расходов ИП ')
+          +providerItem('Составим отчетность в пенсионный и социальные фонды')
+          +providerItem('Сделаем налоговые декларации')
+          +providerItem('Будем отслеживать требования и письма налоговых служб к Вашей организации')
+          +providerItem('Напомним Вам о сроках налоговых платежей и сдачи отчетности')
+          +providerItem('Подскажем об изменениях в налоговом законодательстве')
+
+    //Pluses
+    section.pluses
+      .container
+        .pluses__title
+          span Плюсы&nbsp;
+          |работы с нами
+        .decorator
+        .pluses__inner
+          +plusesItem('Стоимость услуг может быть ниже, чем зарплата штатного бухгалтера')
+          +plusesItem('Мы постоянно учимся и ежегодно повышаем квалификацию за свой счёт.')
+          +plusesItem('Наши услуги застрахованы.')
+          +plusesItem('Конфиденциальность. Мы храним коммерческую тайну.')
+          +plusesItem('Мы не уходим в декрет и не можем уволиться.')
+          +plusesItem('Высокое качество бухгалтерских услуг.')
+          +plusesItem('Расширенный функционал бухгалтера.')
+          +plusesItem('Наличие дополнительных услуг.')
+
+    //Consult
