--- a/src/css/common/header.scss
+++ b/src/css/common/header.scss
@@ -49,17 +49,7 @@
   transition: color 0.1s linear;
 }
 
-.header__icon {
-  vertical-align: middle;
-
-  width: 20px;
-  height: 20px;
-  margin-right: 6px;
-
-  fill: $color-secondary-gamma;
-}
-
-.decotator {
+.decorator {
   @include decorator;
 }
 
@@ -83,9 +73,17 @@
 
   font-style: normal;
 
+  .phones {
+    @include phones('column');
+  }
+
   .header__icon {
     margin-right: 1.2rem;
   }
+}
+
+.header__icon {
+  margin-right: 6px;
 }
 
 .header__location {
@@ -103,19 +101,6 @@
     color: $color-primary-psi;
     font-size: 13px;
   }
-}
-
-.header__phones {
-  display: flex;
-  flex-direction: column;
-}
-
-.header__phone {
-  color: $color-primary-gamma;
-  font-size: 1.6rem;
-  font-weight: 600;
-
-  line-height: 1.4;
 }
 
 .header__location {
