--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -67,3 +67,35 @@ block content
         h3.consult__subtitle Оставьте свою заявку и мы ответим на все ваши вопросы.
         button.consult__callback Оставить заявку
         +phones
+
+    //Company
+    section.company(style="background-image: url(images/index/company/bg.jpg)")
+      .container
+        .company__inner
+          figure.company__img
+            img(src="../../images/index/company/director.jpg", alt="")
+            figcaption
+              p Наталья Малиновская
+              p Директор ООО &laquo;ОлдТраффорд&raquo;
+          .company__info
+            h2.company__title Уважаемые посетители сайта, клиенты и партнеры!
+            .company__txt
+              p За моими плечами более 20 лет опыта в области бухгалтерского учета различных сфер деятельности, включая медицинские услуги, производство, оптовую торговлю и  строительство.
+              p Выбранная много лет назад сфера деятельности сегодня является моей гордостью. Основывая компанию «ОлдТраффорд», я приняла для себя решение, что это будет принципиально иной уровень оказания  бухгалтерских услуг.  Это будет компания, где порядочность, репутация, качество продукта, сервис, деловая этика, финансовая ответственность, стабильность и слово руководителя  - мое слово,  будет дороже денег.
+              p Мне удалось собрать в своей команде самых лучших. Но я все так же продолжаю лично отслеживать выполнение каждого этапа выполненной работы своих сотрудников и несу личную ответственность перед Вами. Мы никогда не прячем голову в песок, не пытаемся заработать деньги любой ценой и не оставляем клиентов наедине с возникающими проблемами, мы стараемся, чтобы оказываемые нами услуги были выполнены не только на высоком уровне, но и были действительно полезны и нужны вам.
+              p Именно наши клиенты и партнеры, наш опыт и команда – это и есть основные ценности компании «ОлдТраффорд». Мы уважаем каждого из наших партнеров и заказчиков, ценим их время и работаем для общего процветания, дорожим своим именем и заботимся о своей репутации, благодаря чему смогли выстроить долговременные доверительные отношения, а также получили признание на рынке и уважение конкурентов.
+              p Я отдельно благодарю каждого клиента, хочу сказать спасибо каждому партнеру за  то, что Вы выбрали нас.  А также,  хочу пригласить новых клиентов оценить качество, оперативность, точность оказываемых ООО «ОлдТраффорд» бухгалтерских услуг, комфорт и слаженность работы всей нашей команды.
+
+    //Features
+    //TODO: decorator classes
+    section.features
+      .container
+        h2.features__title Оцените наши преимущества
+        .decorator
+        .features__inner
+          +featuresItem('like', 'Профессионализм', 'Наши специалисты имеют многолетний опыт обслуживания различных сфер деятельности, постоянно проходят курсы повышения квалификации, участвуют в тематических конференциях и семинарах.')
+          +featuresItem('avatar', 'Индивидуальный подход', 'Индивидуальный план работ для каждого клиента, бухгалтер всегда на связи.')
+          +featuresItem('money', 'Разумная ценовая политика', 'Мы всегда предлагаем самые интересные и адекватные цены.')
+          +featuresItem('protection', 'Риски застрахованы', 'Страховая сумма обеспечивает дополнительную гарантию для наших клиентов')
+          +featuresItem('bank', 'Комплексное обслуживание', 'Мы оказываем полный спектр услуг для бизнеса, если какой-то вопрос находится вне сферы деятельность бухгалтера, то мы подключим другого специалиста нашей команды? юриста, специалиста по кадрам,')
+          +featuresItem('insurance', 'Конфиденциальность', 'Наша компания гарантирует конфиденциальность корпоративной информации')
