--- a/src/css/index/includes/decorator.scss
+++ b/src/css/index/includes/decorator.scss
@@ -1,9 +1,12 @@
-@mixin decorator($width: 100%) {
+.decorator {
   height: 6px;
-  width: $width;
 
   margin: 0 auto;
 
   border-top: 2px solid $color-primary-psi;
   border-bottom: 2px solid $color-primary-alpha;
+
+  &--small {
+    width: 120px;
+  }
 }
