--- a/src/pages/common/footer.pug
+++ b/src/pages/common/footer.pug
@@ -1,2 +1,8 @@
-footer
-
+footer.footer
+  .container
+    .footer__inner
+      .footer__item
+        p.footer__txt &copy; 2014 - 2021г. ООО &laquo;ОлдТраффорд&raquo;. УНП 192230593
+      .footer__item
+        p.footer__txt Информация предоставленная на сайте не является публичной офертой.
+        button.footer__btn Политика конфиденциальности
