--- a/src/css/common/includes/consult.scss
+++ b/src/css/common/includes/consult.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
 
-  padding-top: 10px;
+  padding-top: 2.2rem;
 
   background: linear-gradient(
     94.28deg,
@@ -18,6 +18,8 @@
   max-width: 40.2rem;
 
   margin-right: 10.8rem;
+
+  object-fit: cover;
 }
 
 .consult__info {
@@ -40,10 +42,4 @@
   margin-bottom: 3rem;
 
   font-size: 1.8rem;
-}
-
-.consult__callback {
-  @include button(1.5em, 4.75em);
-
-  margin-bottom: 2.8rem;
 }
