--- a/src/css/utils/vars.scss
+++ b/src/css/utils/vars.scss
@@ -17,6 +17,9 @@ $color-secondary-psi: #4d7eff;
 $color-secondary-omega: #e5e5e5;
 
 $color-tertiary-beta: #f1f1f1;
+$color-tertiary-omega: #999;
+
+$color-quaternary-beta: #fbfbfb;
 
 // Fonts
 $font-primary: 'Museo', sans-serif;
