--- a/src/pages/common/header.pug
+++ b/src/pages/common/header.pug
@@ -10,7 +10,7 @@ header.header
         li: a(href="contacts.html") Контакты
     a.header__mail(href="mailto:buhsale@mail.ru")
       +icon('header__icon icon', 'message')
-      |buhsale@mail.ru
+      p buhsale@mail.ru
   +decorator
   .header__bottom
     .header__inner.container
