--- a/src/css/common/includes/icon.scss
+++ b/src/css/common/includes/icon.scss
@@ -1,9 +1,12 @@
 .icon {
-  vertical-align: middle;
-
-  width: 20px;
-  height: 20px;
-  margin-right: 6px;
+  width: 18px;
+  height: 18px;
+  margin-right: 12px;
 
   fill: $color-secondary-gamma;
+
+  &--large {
+    width: 30px;
+    height: 30px;
+  }
 }
