--- a/src/css/index/map.scss
+++ b/src/css/index/map.scss
@@ -1,22 +1,34 @@
 .map {
   position: relative;
 
-  @include location(column, 16px, 500, 16px);
+  @include location(row, 16px, 500, 16px, column);
+
+  min-height: 70rem;
+}
+
+.map__wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
 .map__info {
   position: absolute;
 
-  top: 0;
-  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+
+  z-index: 1;
 
   max-width: 47rem;
   width: 100%;
 
+  padding: 3.8rem 10.4rem 4.1rem 7rem;
+
   background-color: $color-primary-beta;
   box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.03);
-
-  padding: 3.8rem 10.4rem 4.1rem 7rem;
 
   .phones {
     @include phones(column);
