--- a/src/pages/common/layout.pug
+++ b/src/pages/common/layout.pug
@@ -4,7 +4,7 @@ html(lang="ru")
     head
       meta(charset="utf-8")
       block title
-        title Олд Траффорд
+        title ООО ОлдТраффорд
       meta(content="width=device-width, initial-scale=1" name="viewport")
       meta(content="ie=edge" http-equiv="x-ua-compatible")
       link(rel="stylesheet" href="css/style.min.css")
